quick fix for the spacing on the logo in the ctr

--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@
 h1{
     position: absolute;
     top: 30%;
-    left: 20%;
+    left: 25%;
     color: white;
     font-size: 200px;
 }
